fixed layout issues causing discrepency in screenshots

--- a/src/scss/components/desktop/_product-card.scss
+++ b/src/scss/components/desktop/_product-card.scss
@@ -11,7 +11,6 @@
     &__picture {
       border-radius: 0.5rem 0 0 0.5rem;
       height: inherit;
-      width: inherit;
 
       &--default {
         width: auto;
